--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Cardápio</title>
 </head>
 <body>
@@ -45,7 +45,7 @@
         </div>
         
         <div class="produto">
-            <img src="combo.png" alt="Combo" width="250px">
+            <img src="combo.jpg" alt="Combo" width="250px">
             <h3>Super Combo</h3>
             <p>Combo irresistível com batata, frango a passarinho, anéis de cebola e bolinha de queijo.</p>
             <p class="preco">R$ 40,00</p>
